# easy-peasy

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
src/: app.py  calwatch.py  config.py  db.py  gcal.py  gcal_cli.py  gcalc.py  models.py  sync.py  test_app.py  zcal.py
