[project]
name = "easy-peasy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.2",
    "authlib>=1.6.0",
    "caldav>=1.6.0",
    "click>=8.2.1",
    "fastapi>=0.115.12",
    "google-api-python-client>=2.170.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "icalendar>=6.3.1",
    "icalevents>=0.2.1",
    "notebook>=7.4.3",
    "pydantic-settings>=2.9.1",
    "pytz>=2025.2",
    "typer>=0.16.0",
    "uvicorn>=0.34.2",
]
